Refactor .env file for clarity, enhance error handling in donate.js, and improve database connection in mpesa-callback.php

--- a/.env
+++ b/.env
@@ -1,32 +1,33 @@
-M-Pesa_ShortCode = 'YOUR_SHORTCODE'
-M-Pesa_PassKey = 'YOUR_PASSKEY'
-M-Pesa_ConsumerKey = 'YOUR_CONSUMER_KEY'
-M-Pesa_ConsumerSecret = 'YOUR_CONSUMER_SECRET'
-M-Pesa_CallBack_URL = 'https://YOUR_DOMAIN/mpesa-callback.php' // must be https://YOUR_DOMAIN/mpesa-callback.php
-Account_Reference = "Receiver's account number"
-Transaction_Description = 'Transaction Description'
-M-Pesa_Environment = 'Sandbox' // or Production
+; ensure no spaces around the equals sign and no quotates around the values
+; CallBack_URL must start with https
+; MPESA environment can be either Sandbox or Production
+M-Pesa_ShortCode=SHORT_CODE
+M-Pesa_PassKey=YOUR_PASSKEY
+M-Pesa_ConsumerKey=YOUR_CONSUMER_KEY
+M-Pesa_ConsumerSecret=YOUR_CONSUMER_SECRET
+M-Pesa_CallBack_URL=https://YOUR_DOMAIN/mpesa-callback.php
+Account_Reference=Receivers_account_number
+Transaction_Description=Transaction_Description
+M-Pesa_Environment=Sandbox
 
-// Database variables
-Db_Host = 'YOUR_HOST'
-Db_User = 'YOUR_USERNAME'
-Db_Password = 'YOUR_PASSWORD'
-Db_Name = 'YOUR_DB_NAME'
+; Database variables (MySQL)
+Db_Host=YOUR_DB_HOST
+Db_User=YOUR_DB_USERNAME
+Db_Password=YOUR_DB_PASSWORD
+Db_Name=DB_NAME
 
-// Run this sql in your database to create a table;
-/*
-CREATE TABLE transactions (
-    id INT AUTO_INCREMENT PRIMARY KEY,
-    phone_number VARCHAR(20),
-    amount DECIMAL(10,2),
-    account_reference VARCHAR(100),
-    merchant_request_id VARCHAR(100),
-    checkout_request_id VARCHAR(100),
-    result_code INT,
-    result_desc VARCHAR(255),
-    mpesa_receipt_number VARCHAR(100),
-    transaction_date DATETIME,
-    status VARCHAR(20) DEFAULT 'Pending',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-);
-*/
+; Run this sql in your database to create a table:
+; CREATE TABLE transactions (
+;     id INT AUTO_INCREMENT PRIMARY KEY,
+;     phone_number VARCHAR(20),
+;     amount DECIMAL(10,2),
+;     account_reference VARCHAR(100),
+;     merchant_request_id VARCHAR(100),
+;     checkout_request_id VARCHAR(100),
+;     result_code INT,
+;     result_desc VARCHAR(255),
+;     mpesa_receipt_number VARCHAR(100),
+;     transaction_date DATETIME,
+;     status VARCHAR(20) DEFAULT 'Pending',
+;     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+; )
