Added user session

--- a/server/.env
+++ b/server/.env
@@ -11,10 +11,10 @@ Transaction_Description=Transaction_Description
 M-Pesa_Environment=Sandbox
 
 ; Database variables (MySQL)
-Db_Host=YOUR_DB_HOST
-Db_User=YOUR_DB_USERNAME
-Db_Password=YOUR_DB_PASSWORD
-Db_Name=DB_NAME
+Db_Host=localhost
+Db_User=root
+Db_Password=admin
+Db_Name=login
 
 ; Run this sql in your database to create a table:
 ; CREATE TABLE transactions (
